--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "dashboard",
   "version": "0.1.0",
+  "engines": {
+  },
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
